{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 2479,
  "lineage": "9a94c7a4-c39f-71f9-bf8e-a2a111a89462",
  "resources": [
    {
      "module": "module.hashistack",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267023797923:vpc/vpc-271a045d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-e4e70c8b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-27c3785d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-271a045d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d36500ad",
            "owner_id": "267023797923",
            "tags": {
              "Name": "aji_hcp_consul_vault"
            }
          }
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_elb",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:267023797923:loadbalancer/drifter-server-lb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "drifter-server-lb-718166673.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:4646",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "drifter-server-lb",
            "idle_timeout": 60,
            "instances": [
              "i-09c810d9176a00f1b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 4646,
                "instance_protocol": "http",
                "lb_port": 4646,
                "lb_protocol": "http"
              },
              {
                "instance_port": 8500,
                "instance_protocol": "http",
                "lb_port": 8500,
                "lb_protocol": "http"
              }
            ],
            "name": "drifter-server-lb",
            "security_groups": [
              "sg-02c83124847932f60"
            ],
            "source_security_group": "267023797923/drifter-server-lb",
            "source_security_group_id": "sg-02c83124847932f60",
            "subnets": [
              "subnet-fc1e8cb1"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default",
            "module.hashistack.data.template_file.user_data_server",
            "module.my_ip_address.null_resource.contents",
            "module.my_ip_address.null_resource.contents_if_missing",
            "module.my_ip_address.null_resource.shell",
            "module.my_ip_address.random_uuid.uuid"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0991c8855b25fb5ff",
            "arn": "arn:aws:ec2:us-east-1:267023797923:instance/i-0d2acda88cc9c230d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-051d3ceb63cab6536",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "drifter20220620203608250600000003",
            "id": "i-0d2acda88cc9c230d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "lvd-nomad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b020b7f23afd08bc",
            "private_dns": "ip-172-31-27-233.ec2.internal",
            "private_ip": "172.31.27.233",
            "public_dns": "ec2-54-91-201-113.compute-1.amazonaws.com",
            "public_ip": "54.91.201.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0341ce4fc38d8a2d7",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "drifter"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fc1e8cb1",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "drifter-client-0"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "drifter-client-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e30371d82d7c5c57"
            ]
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default",
            "module.hashistack.data.template_file.user_data_client",
            "module.hashistack.data.template_file.user_data_server",
            "module.my_ip_address.null_resource.contents",
            "module.my_ip_address.null_resource.contents_if_missing",
            "module.my_ip_address.null_resource.shell",
            "module.my_ip_address.random_uuid.uuid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0991c8855b25fb5ff",
            "arn": "arn:aws:ec2:us-east-1:267023797923:instance/i-0a701cd2f943b253c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvdd",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-07c2afe7d9e905f4c",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "drifter20220620203608250600000003",
            "id": "i-0a701cd2f943b253c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "lvd-nomad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095e39c4bf88b3487",
            "private_dns": "ip-172-31-26-76.ec2.internal",
            "private_ip": "172.31.26.76",
            "public_dns": "ec2-54-91-122-220.compute-1.amazonaws.com",
            "public_ip": "54.91.122.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00d5d2ac89206c037",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "drifter"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fc1e8cb1",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "drifter-client-1"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "drifter-client-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e30371d82d7c5c57"
            ]
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_instance.server",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default",
            "module.hashistack.data.template_file.user_data_client",
            "module.hashistack.data.template_file.user_data_server",
            "module.my_ip_address.null_resource.contents",
            "module.my_ip_address.null_resource.contents_if_missing",
            "module.my_ip_address.null_resource.shell",
            "module.my_ip_address.random_uuid.uuid"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0991c8855b25fb5ff",
            "arn": "arn:aws:ec2:us-east-1:267023797923:instance/i-09c810d9176a00f1b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "drifter20220620203608250600000003",
            "id": "i-09c810d9176a00f1b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "lvd-nomad",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-041b4f2308edd389d",
            "private_dns": "ip-172-31-20-180.ec2.internal",
            "private_ip": "172.31.20.180",
            "public_dns": "ec2-54-82-96-206.compute-1.amazonaws.com",
            "public_ip": "54.82.96.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c6bd95c92c9bb0e",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "drifter"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-fc1e8cb1",
            "tags": {
              "ConsulAutoJoin": "auto-join",
              "Name": "drifter-server-0"
            },
            "tags_all": {
              "ConsulAutoJoin": "auto-join",
              "Name": "drifter-server-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e30371d82d7c5c57"
            ]
          },
          "dependencies": [
            "module.hashistack.aws_iam_instance_profile.instance_profile",
            "module.hashistack.aws_iam_role.instance_role",
            "module.hashistack.aws_security_group.primary",
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_iam_policy_document.instance_role",
            "module.hashistack.data.aws_vpc.default",
            "module.hashistack.data.template_file.user_data_server",
            "module.my_ip_address.null_resource.contents",
            "module.my_ip_address.null_resource.contents_if_missing",
            "module.my_ip_address.null_resource.shell",
            "module.my_ip_address.random_uuid.uuid"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "drifter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267023797923:security-group/sg-059b4f156139e718c",
            "description": "EFS Access Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059b4f156139e718c",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Ingress rule to allow traffic to EFS",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "terraform-20220620203607078900000002",
            "name_prefix": "terraform-",
            "owner_id": "267023797923",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "drifter-EFS"
            },
            "tags_all": {
              "Name": "drifter-EFS"
            },
            "timeouts": null,
            "vpc_id": "vpc-271a045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267023797923:security-group/sg-0e30371d82d7c5c57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e30371d82d7c5c57",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 18080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 18080
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c83124847932f60"
                ],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 50070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50070
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 50075,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 50075
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c83124847932f60"
                ],
                "self": false,
                "to_port": 8500
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 9998,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "drifter",
            "name_prefix": "",
            "owner_id": "267023797923",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-271a045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.aws_security_group.server_lb",
            "module.hashistack.data.aws_vpc.default",
            "module.my_ip_address.null_resource.contents",
            "module.my_ip_address.null_resource.contents_if_missing",
            "module.my_ip_address.null_resource.shell",
            "module.my_ip_address.random_uuid.uuid"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:267023797923:security-group/sg-02c83124847932f60",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c83124847932f60",
            "ingress": [
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "72.207.74.177/32"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              }
            ],
            "name": "drifter-server-lb",
            "name_prefix": "",
            "owner_id": "267023797923",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-271a045d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.data.aws_vpc.default",
            "module.my_ip_address.null_resource.contents",
            "module.my_ip_address.null_resource.contents_if_missing",
            "module.my_ip_address.null_resource.shell",
            "module.my_ip_address.random_uuid.uuid"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "drifter-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2465458266",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-059b4f156139e718c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.aws_security_group.drifter",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hashistack",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "drifter-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "172.31.0.0/16"
            ],
            "description": "Ingress rule to allow traffic to EFS",
            "from_port": 2049,
            "id": "sgrule-735749263",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-059b4f156139e718c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hashistack.aws_security_group.drifter",
            "module.hashistack.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}